Update using common index.html.erb
Some Differences are placed in locale files.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -31,3 +31,9 @@ en:
     forum: Community Forum
     github: GitHub Repository
     built_using_middleman: Sites Built Using Middleman
+
+
+  index:
+    headline: makes developing websites simple
+    description: Middleman is a static site generator using all the shortcuts and tools in modern web development.
+    getting_started: Getting started
