--- a/locales/en.yml
+++ b/locales/en.yml
@@ -18,7 +18,7 @@ en:
     configuration: Configuring Your Site
     local_data: Local Data
     localization: Localization (i18n)
-    sitemap: Tha Sitemap
+    sitemap: The Sitemap
     rack_middleware: Rack Middleware
     custom: Custom Extensions
     file_size_optimization: File Size Optimization
