Added initial Directory Structure docs: middleman-guides/issues#61 Added Sourcey and source code to "Built Using Middleman"

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -11,6 +11,7 @@ en:
     asset_pipeline: Asset Pipeline
     pretty_urls: Pretty URLs (Directory Indexes)
     livereload: LiveReload
+    directory_structure: Directory Structure
     blogging: Blogging
 
   advanced:
