Add directory-structure page (JP)
related #286

- original filename is changed.
- update Japanese locale file.
- add /basics/jp/directory-structure/

--- a/locales/jp.yml
+++ b/locales/jp.yml
@@ -11,7 +11,7 @@ jp:
     asset_pipeline: アセットパイプライン
     pretty_urls: きれいな URL (ディレクトリインデックス)
     livereload: LiveReload
-    directory_structure: Directory Structure    
+    directory_structure: ディレクトリ構造
     blogging: ブログ機能
 
   advanced:
