Style the Footer for the landing page
* Add footer partial
* Add FontAwesome support
* Add copy for footer
* Add thoughtbot logo
* Add modules directory to organize stylesheets

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -68,4 +68,5 @@ en:
     title: Sites Built Using Middleman
     mobile: Mobile Apps Built Using Middleman
     blog: Blogs Using Middleman
-    fork: Fork and add your site on Github
+    twitter: "@middlemanapp"
+    github: GitHub
