Add nav partial and move nav markup to partial
- Rename navigation partials to be more semantic
- Change href links to use link_to method
- Add contribute translation
- Rename classes in nav
- Change hover color of cta in nav
- Change contribute pathway
- Move logo link to one line
- Move logo link to two lines
- Update nav to docs
- Move code style from layout to typography
- Add new side-nav stylesheet and align doc elements
- Update header typography styles in docs
- Add search bar to docs
- Consolidate stylesheets

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,9 @@
 ---
 en:
-  # navigations
+  navigation:
+    contribute: Contribute
+    docs: Docs
+    logo: Middleman
   basics:
     title: Middleman Basics
     blogging: Blogging
@@ -12,7 +15,6 @@ en:
     install: Install
     layouts: Layouts
     partials: Partials
-    pretty_urls: Pretty URLs (Directory Indexes)
     start_new_site: Start a New Site
     templates: Templating Language
 
@@ -32,6 +34,7 @@ en:
     project_templates: Project Templates
     rack_middleware: Rack Middleware
     sitemap: The Sitemap
+    pretty_urls: Pretty URLs (Directory Indexes)
 
   open_source:
     title: Contribute to Open Souce
@@ -52,11 +55,9 @@ en:
 
   # index
   index:
-    logo: Middleman
     sub_title: Hand-crafted frontend development
     headline: Build static websites <br> with an easy-to-use framework
     description: Middleman is a static site generator using all the shortcuts and tools in modern web development.
-    docs: Docs
     getting_started: Getting started
     description:
       first: Free
