--- a/locales/en.yml
+++ b/locales/en.yml
@@ -72,23 +72,30 @@ en:
     subtitle: Middleman benefits from an active community. Whether you need a
       question answered or want to contribute to open-source features, our
       community page will lead you in the right direction.
+    main_text: Middleman benefits from an active community. Whether you need a
+      question answered or want to contribute to open-source features, browse
+      the features below to make the most of Middleman.
     built_using_middleman: Sites Built Using Middleman
-    deployment:
-      header: Deployment Solutions
-      description: Whether you use Heroku or anything else to deploy, we'll help you do that.
-      link_text: See deployment solutions
-    extensions:
-      header: Extensions
-      description: Add new capabilities and features to your Middleman website.
-      link_text: See all extensions
     forum:
       header: Community Forum
       description: Use the forum to chat with other folks about Middleman.
       link_text: Visit forum
+
+  contributions:
+    title: Contributions from Middleman Users
+    deployment:
+      header: Deployment Solutions
+      description: "Whether you use Heroku or anything else to deploy, we'll
+help you do that."
+      link_text: See deployment solutions
+    extensions:
+      header: Extensions
+      description: Add interesting new capabilities and features to your Middleman website.
+      link_text: See all extensions
     github: GitHub Repository
     templates:
       header: Project Templates
-      description: Create a project with pre-made templates using your favorite code libraries.
+      description: Create a project with pre-made templates usig your favorite code libraries.
       link_text: See project templates
 
   # index
@@ -98,8 +105,6 @@ en:
     description: Middleman is a static site generator using all the shortcuts
       and tools in modern web development.
     getting_started: Getting started
-    description: Free and Open Static Site Generator
-
   # community/built-using-middleman
   built:
     title: Sites Built Using Middleman
