Connect sites using Middleman page to rest of website
* Add styles to site built but need to fix sticky
* Modify sticky sidebar by using fixed widths
* Rename `waypoints` tag class to `aside.sidebar-container`
* Refactor `#toc` into separate `sidebar` file
* Layout is *not responsive*
* Use new syntax for symbols

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -105,6 +105,7 @@ help you do that."
     description: Middleman is a static site generator using all the shortcuts
       and tools in modern web development.
     getting_started: Getting started
+
   # community/built-using-middleman
   built:
     title: Sites Built Using Middleman
@@ -113,3 +114,4 @@ help you do that."
     twitter: "@middlemanapp"
     github: GitHub
     source_code: source code
+    fork: Fork and add your site on GitHub
