--- a/locales/en.yml
+++ b/locales/en.yml
@@ -75,7 +75,7 @@ en:
     main_text: Middleman benefits from an active community. Whether you need a
       question answered or want to contribute to open-source features, browse
       the features below to make the most of Middleman.
-    built_using_middleman: Sites Built Using Middleman
+    built_using_middleman: Companies Using Middleman
     forum:
       header: Community Forum
       description: Use the forum to chat with other folks about Middleman.
