Update japanese docs to v4
I reflected the document change of v4 to Japanese pages.
Because some of the Japanese translation is not a good representation,
these will be fixed later

For all pages

* Add missing "/" to some links
* mv "community.html.erb" "localizable/community.html.erb" to use i18n

In english pages:

* Add Frontmatter: "title"
* Change some line breaks
* Fix some small problems

In japanese pages:

* Update locale YAML
* Add new page
* Update exist page
* remove unnecessary files

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -106,6 +106,8 @@ help you do that."
     description: Middleman is a static site generator using all the shortcuts
       and tools in modern web development.
     getting_started: Getting started
+    contribute: Contribute to the open-source community
+    see_middleman_sites: See All Middleman Sites
 
   # community/built-using-middleman
   built:
