Layout for docs

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -2,13 +2,13 @@
 en:
   title: Middleman
   navigation:
-    contribute: Contribute
+    community: Community
     docs: Docs
     search_placeholder: Search the docs
     basics:
       title: Basics
       blogging: Blogging
-      build_deploy: Build & Deploy
+      build_deploy: "Build & Deploy"
       development_cycle: Development Cycle
       directory_structure: Directory Structure
       frontmatter: Frontmatter
@@ -36,14 +36,6 @@ en:
       project_templates: Project Templates
       rack_middleware: Rack Middleware
       sitemap: The Sitemap
-    community:
-      title: Open-Source Community
-      built_using_middleman: Sites Built Using Middleman
-      community_forum: Community Forum
-      custom_extensions: Custom Extensions
-      deployment_solution: Deployment Solution
-      github: GitHub Repository
-      project_templates: Project Templates
   open_source:
     title: Contribute to Open Souce
     service: Add Your Service
